# ansible-playbooks

./: .flake8  .gitignore  .gitmodules  .travis.yml  .yamllint  Gemfile  Makefile  README.md  Rakefile  TODOs.org  Vagrantfile  ansible.cfg  apt-mirror.yml  awx.yml  backup.yml  build.gradle  chronograf.yml  dhcp.yml  dns.yml  docker-swarm.yml  fail2ban.yml  foreman.yml  freeipa.yml  galaxy.yml  grafana.yml  graylog.yml  home.yml  influxdb.yml  jumpcloud.yml  keycloak.yml  kubernetes.yml  kvm.yml  letsencrypt.yml  librenms.yml  localhost.yml  mesos.yml  mirror.yml  nephelai-playbook.yml  nfs.yml  nginx.yml  (+37 more)
awx/: configure.yml  credential_create.yml  credential_destroy.yml  install.yml  inventory_create.yml  inventory_destroy.yml  local_docker.yml  organization_create.yml  organization_destroy.yml  project_create.yml  project_destroy.yml  proxy.yml  schedule_create.yml  schedule_destroy.yml  template_create.yml  template_destroy.yml  workflow_create.yml  workflow_destroy.yml
dhcp/: install.yml  reservations.yml
dns/: authoritative.yml  recursor.yml  register.yml  resolver.yml
dockerfiles/: wily
filter_plugins/: list2dictlist.py
foreman/: configure.yml  dhcp.yml  domains.yml  guests.yml  hostgroups.yml  hosts.yml  install.yml  media.yml  networks.yml  os.yml  pdns.yml  provisioning_templates.yml  proxy.yml  ptables.yml  server.yml  tftpd.yml
freeipa/: clients.yml  nginx.yml  prepare.yml  replicas.yml  server.yml  users.yml
home/: dns.yml
inventory/: aws  awx.yml  chonograph.yml  dhcp.yml  dns.yml  foreman.yml  graylog.yml  hosts  hosts.yml  influxdb.yml  local  (+12 more)
(+726 files in other folders)
