[tool.poetry]
name = "ansible-playbooks"
version = "0.1.0"
description = ""
authors = ["Ted Cook <teodoro.cook@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
awscli = "^1.22.26"
ansible = "^5.1.0"
jmespath = "^0.10.0"
netaddr = "^0.8.0"
yamllint = "^1.26.3"
flake8 = "^4.0.1"
ansible-tower-cli = "^3.3.9"
xkcdpass = "^1.19.3"
ansible-core = "^2.12.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
